--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <link href="./output.css" rel="stylesheet">
   <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY" defer></script>
 </head>
-<body>
+<body class="">
   <style>
     html {
     scroll-behavior: smooth;
